# phrix

./: .gitignore  CMakeLists.txt
src/: Makefile  mat.h  math.h  phrix.cc  vector.h
src/assetmanager/: assetmanager.cc  assetmanager.h
src/game/: CMakeLists.txt  camera.h  entity.h  game.cc  game.h  gamecommon.h  jobmanager.cc  jobmanager.h  scene.cc  scene.h  service.h  servicemanager.cc  servicemanager.h  transforms.cc  transforms.h
src/graphics/: CMakeLists.txt  color.h  graphics.cc  graphics.h  graphicsresourcefactory.h  pixelshader.h  rendertexture2d.h  shader.h  texture.h  texture2d.h  vertexshader.h
src/graphics/renderer/: CMakeLists.txt  renderer.cc  renderer.h
src/graphics/renderer/directx/: CMakeLists.txt  directx.cc  directx.h  dxresourcefactory.cc  dxresourcefactory.h
